fix: mobile text alignment portfolio

--- a/css/main.css
+++ b/css/main.css
@@ -1100,6 +1100,11 @@ img {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media (max-width: 480px) {
+  .products__descr {
+    padding: 20px 24px;
+  }
+}
 @media (min-width: 768px) {
   .products__descr {
     padding: 49px 24px;
